--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     height: 500px;
     border: 1px solid black;
     margin: auto;
+    background-color: lightblue;
 }
 
 
@@ -12,6 +13,10 @@ h1 {
 
 }
 
-h5 {
+h3 {
+  text-align: center;
+}
+
+ul {
   text-align: center;
 }
